// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty list properly 1`] = `
<div>
  <div
    className="mantine-Text-root mantine-1pbxw0k"
  >
    Empty
  </div>
</div>
`;

exports[`renders list with two elements properly 1`] = `
<div>
  <div
    className="mantine-Paper-root mantine-Card-root mantine-ergsfy"
  >
    <div
      className="mantine-Text-root mantine-1pbxw0k"
    >
      1
    </div>
    <div
      className="mantine-Text-root mantine-1pbxw0k"
    >
      1
    </div>
  </div>
  <div
    className="mantine-Paper-root mantine-Card-root mantine-ergsfy"
  >
    <div
      className="mantine-Text-root mantine-1pbxw0k"
    >
      2
    </div>
    <div
      className="mantine-Text-root mantine-1pbxw0k"
    >
      2
    </div>
  </div>
</div>
`;
